# node_manager

./: CMakeLists.txt  README.md  package.xml
config/: _manager.yaml  config.yaml
include/node_manager/: node_manager.hpp  subprocess_manager.hpp
launch/: node_manager_launch.py
msg/: DictionarySerialized.msg  NodeRedCommand.msg  README.md
scripts/: get_file_content.py  get_full_launch_path.py  get_interface_path.py  get_launch_arg.py  list_config_files.py  list_launch.py  list_launch_arguments.py  list_launch_files.py  list_nodes.py  list_packages.py  resolve_file_path.py
src/: agent.cpp  main.cpp  node_manager.cpp  subprocess_manager.cpp  websocket.cpp
srv/: DictionarySerialized.srv
